[project]
name = "wrobocon2025"
version = "0.1.0"
description = "wrobocon workshop"
authors = [
    {name = "Jerzy Glowacki",email = "jerzy.glowacki@niceproject.eu"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "robotframework (>=7.3.2,<8.0.0)",
    "robotframework-browser (>=19.10.1,<20.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
